--- a/index.html
+++ b/index.html
@@ -1,33 +1,29 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ソシャゲ更新カレンダー</title>
-
-  <!-- 軽量CSS：Picnic CSS（商用利用可） -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/picnic">
-
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>ソシャゲ更新ウォッチャー</title>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/picnic">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header>
-  <h1>ソシャゲ更新カレンダー</h1>
-  <p>各ゲームのアップデート・イベント情報を自動取得</p>
+  <h1>ソシャゲ更新ウォッチャー</h1>
+  <p>日付ごとの更新をカレンダー形式で表示</p>
 </header>
 
 <main>
-  <section id="updates" class="card">
-    <h2>最新更新情報</h2>
-    <div id="list">読み込み中…</div>
+  <section class="card">
+    <button id="refresh">今すぐ更新確認</button>
+    <div id="calendar">読み込み中…</div>
   </section>
 
   <section class="card">
     <h2>広告</h2>
-    <!-- ▼ ここにA8やバリューコマースの広告タグを貼る ▼ -->
     <div id="ad-area">
-      <!-- A8・Amazon などの広告コードをここに貼る -->
+      <!-- 広告コード貼る -->
     </div>
   </section>
 </main>
