--- a/index.html
+++ b/index.html
@@ -1,37 +1,22 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ソシャゲ更新ウォッチャー</title>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/picnic">
-<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ソシャゲ更新カレンダー</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <header>
+    <h1>ソシャゲ更新カレンダー</h1>
+  </header>
 
-<header>
-  <h1>ソシャゲ更新ウォッチャー</h1>
-  <p>日付ごとの更新をカレンダー形式で表示</p>
-</header>
-
-<main>
-  <section class="card">
-    <button id="refresh">今すぐ更新確認</button>
-    <div id="calendar">読み込み中…</div>
-  </section>
-
-  <section class="card">
-    <h2>広告</h2>
-    <div id="ad-area">
-      <!-- 広告コード貼る -->
+  <main>
+    <div id="calendar">
+      <!-- カレンダー形式で更新情報がここに表示される -->
     </div>
-  </section>
-</main>
+  </main>
 
-<footer>
-  <p>© 2025 ソシャゲ更新ウォッチャー</p>
-</footer>
-
-<script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
