--- a/index.html
+++ b/index.html
@@ -2,21 +2,12 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ソシャゲ更新カレンダー</title>
+  <title>ゲーム更新情報</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>ソシャゲ更新カレンダー</h1>
-  </header>
-
-  <main>
-    <div id="calendar">
-      <!-- カレンダー形式で更新情報がここに表示される -->
-    </div>
-  </main>
-
+  <h1>原神 更新情報</h1>
+  <div id="calendar"></div>
   <script src="script.js"></script>
 </body>
 </html>
